--- a/notes/w2/l1.md
+++ b/notes/w2/l1.md
@@ -1,25 +1,30 @@
 # ----- ANALYSIS OF ALGORITHMS -----
 
-# running time of an algorithm depends on the input size
+### running time of an algorithm depends on the input size
 
-# so we measure the time as a function of input size
+### so we measure the time as a function of input size
 
-# if input size is n then t(n)
+### if input size is n then t(n)
 
-# also different inputs of same size may take different amount of time
+### also different inputs of same size may take different amount of time
 
-"""
-    when comparing t(n):
-        ignore constant factors
-            let f(n) = n**3 and g(n) = 5000 * n**2
-            here f(n) overtakes g(n) for larger values of n
-            so we ignore the constant 5000
-"""
+when comparing t(n):
+    - ignore constant factors
+        * let f(n) = n**3 and g(n) = 5000 * n**2, here f(n) overtakes g(n) for larger values of n
+        * so we ignore the constant 5000
 
-|input size | log n | n | nlogn | n^2 | n^3 | 2^n | n! |
-|-----------|-------|---|-------|-----|-----|-----|----|
-|10         |       |   |       |     |     |     |    |
-| 100       |       |   |       |     |     |     |    |
-| 1000      |       |   |       |     |     |     |    |
-|10^4       |       |   |       |     |     |     |    |
-|10^5       |
+
+|input size | log n |  n   | nlogn | n^2 | n^3 | 2^n  |  n!   |
+|-----------|-------|------|-------|-----|-----|------|-------|
+| 10        | 3.3   | 10   |33     |  100|1000 |1000  |10^6^  |
+| 100       | 6.6   |100   |66     |10^4^|10^6^|10^30^|10^157^|
+| 1000      | 10    |1000  |10^4^  |     |     |      |       |
+| 10^4      | 13    |10^4^ |10^5^  |     |     |      |       |
+| 10^5      | 17    |10^5^ |10^6^  |     |     |      |       |
+| 10^6      | 20    |10^6^ |10^7^  |     |     |      |       |
+| 10^7      | 23    |10^7^ |10^8^  |     |     |      |       |
+| 10^8      | 27    |10^8^ |10^9^  |     |     |      |       |
+| 10^9      | 30    |10^9^ |10^10^ |     |     |      |       |
+| 10^10     | 33    |10^10^|10^11^ |     |     |      |       |
+
+
