--- a/notes/w2/l1.md
+++ b/notes/w2/l1.md
@@ -17,7 +17,7 @@ when comparing t(n):
 |input size | log n |  n   | nlogn | n^2 | n^3 | 2^n  |  n!   |
 |-----------|-------|------|-------|-----|-----|------|-------|
 | 10        | 3.3   | 10   |33     |  100|1000 |1000  |10^6^  |
-| 100       | 6.6   |100   |66     |10^4^|10^6^|10^30^|10^157^|
+| 100       | 6.6   |100   |66     |10<sup>4^</sup>|10^6^|10^30^|10^157^|
 | 1000      | 10    |1000  |10^4^  |     |     |      |       |
 | 10^4      | 13    |10^4^ |10^5^  |     |     |      |       |
 | 10^5      | 17    |10^5^ |10^6^  |     |     |      |       |
