--- a/notes/w2/l1.md
+++ b/notes/w2/l1.md
@@ -1,5 +1,7 @@
 # ----- ANALYSIS OF ALGORITHMS -----
 
+***
+
 ### running time of an algorithm depends on the input size
 
 ### so we measure the time as a function of input size
@@ -9,15 +11,15 @@
 ### also different inputs of same size may take different amount of time
 
 when comparing t(n):
-    - ignore constant factors
-        * let f(n) = n**3 and g(n) = 5000 * n**2, here f(n) overtakes g(n) for larger values of n
-        * so we ignore the constant 5000
+    + ignore constant factors
+        . let f(n) = n**3 and g(n) = 5000 * n**2, here f(n) overtakes g(n) for larger values of n
+        . so we ignore the constant 5000
 
 
 |input size | log n |  n   | nlogn | n^2 | n^3 | 2^n  |  n!   |
 |-----------|-------|------|-------|-----|-----|------|-------|
 | 10        | 3.3   | 10   |33     |  100|1000 |1000  |10^6^  |
-| 100       | 6.6   |100   |66     |10<sup>4^</sup>|10^6^|10^30^|10^157^|
+| 100       | 6.6   |100   |66     |104^ |10^6 |10^30 |10^157 |
 | 1000      | 10    |1000  |10^4^  |     |     |      |       |
 | 10^4      | 13    |10^4^ |10^5^  |     |     |      |       |
 | 10^5      | 17    |10^5^ |10^6^  |     |     |      |       |
@@ -28,3 +30,7 @@ when comparing t(n):
 | 10^10     | 33    |10^10^|10^11^ |     |     |      |       |
 
 
+### worst case:
+    + while trying to calculate the time taken for an algorithm we dont use average time even though different inputs takes different time to complete
+
+    + Instead we use worst case. worst case is the input that forces the algorithm to take the longest possible time
