--- a/notes/w2/l2.md
+++ b/notes/w2/l2.md
@@ -7,4 +7,4 @@
 - f(x) is said to be O(g(x) if we can find c and x<sub>0</sub> such that c.g(x) is an upper bound of f(x) for x beyond x<sub>0</sub>.
 - f(x) <= c.g(x) for every x greater than x<sub>0</sub>.
 
-![myimage](/images/1.png)
+![myimage](./images/1.png)
