--- a/notes/w2/l2.md
+++ b/notes/w2/l2.md
@@ -1,10 +1,56 @@
 # ----- ORDERS OF MAGNITUDE -----
 
-***
-
 ## Upper bound
 
 - f(x) is said to be O(g(x) if we can find c and x<sub>0</sub> such that c.g(x) is an upper bound of f(x) for x beyond x<sub>0</sub>.
 - f(x) <= c.g(x) for every x greater than x<sub>0</sub>.
 
 ![myimage](./images/1.png)
+
+## graphs of typical functions we have seen
+
+![img2](./images/2.png)
+
+for example:
+* let 100(n) + 5 and n<sup>2</sup>
+    * 100n + 5 <= 100n + n = 101n for n >= 5
+    * 101n <= 101<sup>2</sup>
+    * 101n <=  101n<sup>2</sup>
+    * let n<sub>0</sub> = 5, c = 101
+    * then 100n + 5 is O(n)
+
+* the choice of n<sub>0</sub> and c is not unique
+    * for the same example
+    * 100n +  5 <= 100n + 5n = 105n for n >= 1
+    * 105n <= 105n<sup>2</sup>
+    * here n<sub>0</sub> = 1, c = 105
+* 100n<sup>2</sup> +20n + 5 is O(n)
+	* 100n<sup>2</sup> + 20n + 5 <= 100n<sup>2</sup> + 20n<sup>2</sup> + 5n<sup>2</sup> for n >= 1
+	* 100n<sup>2</sup> + 20n + 5 <= 125n<sup>2</sup> fot n >= 1
+	* n<sub>0</sub> = 1, c = 125
+* but n<sup>3</sup> is not O(n<sup>2</sup>)
+	* for any c, cn<sup>2</sup> <= n<sup>3</sup> for n >= c
+	* no matter how big the c is
+
+***
+## Useful properties
+
+* if f<sub>1</sub>(n) is O(g<sub>1</sub>(n)) and f<sub>2</sub>(n) is O(g<sub>2</sub>(n)) then  
+* f<sub>1</sub>(n) + f<sub>2</sub>(n) is O(max(g<sub>1</sub>(n), g<sub>2</sub>n)
+
+***
+
+## Lower bounds
+
+* lower bound is kinda the opposite of the upper bound
+* n<sup>2</sup> is lower bound of n<sup>3</sup>
+* n<sup>2</sup> < n<sup>3</sup>  for all c = 1, n > 1
+
+## Tight bounds
+
+* f(x) is said to be tightly bounded by g(x) if g(x) is both the upper and lower bound of f(x)
+* n(n - 1) is tightly bounded by n<sup>2</sup> 
+	* n(n - 1)  = n<sup>2</sup> / 2 - n / 2 <=  n<sup>2</sup> / 2 for all  n > 0 (Upper bound)
+	* n(n - 1)  = n<sup>2</sup> / 2 - n / 2 >=  n<sup>2</sup> / 2 - (n / 2 * n / 2) for all  n > 2 (Lower bound)
+
+
