--- a/notes/w2/l7.md
+++ b/notes/w2/l7.md
@@ -36,11 +36,11 @@ combine  two sorted lists A and B to C
 def merge(A, B):
 	(m, n) = (len(A), len(B))
 	(C, i, j, k) = ([], 0, 0, 0)
-	while k > (m+n):
-		if m == 0:
+	while k < (m+n):
+		if i == m:
 			C.extends(B[j:])
 			k = k + n - j 
-		elif n == 0:
+		elif j == n:
 			C.extends(A[i:])
 			k = k + m - i 
 		elif A[i] < B[j]:
