SINGLE SOURCE SHORTEST PATHS

--- a/notes/w5.md
+++ b/notes/w5.md
@@ -68,12 +68,40 @@ All pairs shortest path
     * Without negative cycles, shortest paths still well defined
 
 
+### SINGLE SOURCE SHORTEST PATHS
+##### Single source shortest paths
 
+* Weighted graph:
+    * G - (V, E)
+    * W: E -> R
+* Single source shortest paths
+    * Find shortest paths from a fixed vertex to every other vertex
+* Assume, for now, that edge weights are all non-negative
+* Compute shortest path from 0 to all other vertices
+* Imagine vertices are oil depots, edges are pipelines
+* Set fire to oil depot at vertex 0
+* Fire travels at uniform speed along each pipeline
+* First oil depot to catch fire after 0 is nearest vertex
+* Next oil depot is second nearest vertex
+* ...
 
 ![weighted graph](./4.png)
 
+* Compute expected burn time for each vertex
+* Each time a new vertex burns, update the expected burn times of its neighbours
+* Algorithm due to Edsger W Dikjstra
 
 ![weighted graph](./5.png)
+### Dikjstra's algorithm: Proof of correctness
 
+* Each new shortest path we discover extends an earlier one (Greedy method)
+* By induction, assume we have found shortest paths to all vertices already burnt
 
+Next vertex to burn is v, via x
+Can't find a shorter path later from y to v via w
+Burn time of w >= burn time of v
+Edge from w to v has weight >= 0
+
+This argument breaks down if edge (w, v) can have negative weight
+Can't use Dikjstra's algorithm with negative edge weights
 ![weighted graph](./6.png)
